COrrection version tablette

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ main {
 h1 {
     margin-bottom: 0;
     margin-top: 20px;
-    
 }
 
 h2 {
@@ -325,6 +324,7 @@ a.images:active {
 .etoiles {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     bottom: 0;
 }
 
@@ -877,8 +877,8 @@ VERSION MOBILE
 
     a.grandesimages img {
         width: 100%;
-        max-height: 150px;
-        height: 150px;
+        max-height: 160px;
+        height: 160px;
         border-radius: 20px 20px 0 0;
     }
 
@@ -936,7 +936,7 @@ VERSION MOBILE
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        width: 100%;
+        width: 90%;
         margin-left: 18px;
     }
 
@@ -956,13 +956,26 @@ VERSION TABLETTE PORTRAIT
     header {
         padding: 10px;
         margin-bottom: 0;
+        width: 80%;
     }
 
     main {
-        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        min-width: 80%;
+        width: 80%;
+        max-width: 80%;
+        justify-content: center;
+        align-items: center; 
     }
 
-    /*Section hébergements et populaires TABLETTE PORTRAIT*/
+    #trouver {
+        max-width: 95%;
+        min-width: 95%;
+    }
+
+    /*Section hébergements et populaires PORTRAIT*/
 
     #propositions {
         display: flex;
@@ -970,105 +983,105 @@ VERSION TABLETTE PORTRAIT
         justify-content: center;
         align-items: center;
         flex-direction: column-reverse;
+        width: 95%;
     }
 
-    /**Hébergements TABLETTE PORTRAIT**/
+    /*Hébergements PORTRAIT*/
 
     #presentation {
         border-radius: 0 0 0 0;
-        border: 0;
+        padding: 0;
         background-color: white;
         max-width: 100%;
         min-width: 100%;
-        align-items: center;
-        justify-content: center;
+        margin: 0;
     }
 
     #presentation h1 {
         width: 100%;
-        margin-left: 15px;
         margin-bottom: 15px;
     }
 
     #presentation h3 {
-        margin-left: 70px;
+        margin-left: 15px;
         margin-bottom: 0;
         width: 100%;
     }
     
     #vignettes {
-        max-width: 80%;
-        min-width: 80%;
+        max-width: 100%;
+        min-width: 100%;
         height: auto;
+        align-items: center;
+        justify-content: center;
     }
 
     a.images {
-        max-height: 400px;
-        max-width: 100%;
-        min-width: 100%;
+        height: auto;
+        max-width: 95%;
+        min-width: 95%;
         margin: 0;
+        max-height: 280px;
+        height: 280px;
         margin-bottom: 20px;
     }
 
     a.images img {
-        max-height: 240px;
-        margin-bottom: 10px;
-        max-width: 100%;
         width: 100%;
-        height: 100%;
+        height: 30%;
+        height: 200px;
+        max-height: 200px;
         border: white solid;
         border-radius: 20px 20px 0 0;
     }
 
-    /*Populaires TABLETTE PORTRAIT*/
+    /*Populaires PORTRAIT*/
 
     #populaires {
+        padding: 0;
         border-radius: 0 0 0 0;
         min-width: 100%;
         max-width: 100%;
+        margin: 0;
     }
 
     #entete {
-        min-width: 100%;
-        max-width: 100%;
-        justify-content: space-around;
-    }
-
-    #entete i {
-        margin-top:65px;
-        margin-left: 25%;
+        min-width: 95%;
+        max-width: 95%;
+        justify-content: space-between;
+        margin: 0;
     }
 
     #popmobile {
         margin-bottom: 5%;
-        min-width: 80%;
-        max-width: 80%;
+        min-width: 95%;
+        max-width: 95%;
     }
 
     a.imagescote {
         min-width: 100%;
         max-width: 100%;
         margin-left: 0px;
-        min-height: 200px;
-        max-height: 200px;
+        min-height: 180px;
+        max-height: 180px;
     }
 
     a.imagescote img {
-        max-height: 100%;
-        max-width: 5%;
+        max-height: 60%;
+        max-width: 50%;
     }
 
     .descriptionpop {
-        margin-top: 5px;
         max-width: 100%;
         margin-left: 3%;
     }
 
-    /*Activités TABLETTE PORTRAIT*/
+    /*Activités PORTRAIT*/
 
     #sectionactivités {
-        min-width: 100%;
-        max-width: 100%;
+        min-width: 95%;
+        max-width: 95%;
+        margin: 0;
     }
 
     #sectionactivités h1 {
@@ -1079,26 +1092,95 @@ VERSION TABLETTE PORTRAIT
         align-items: center;
         justify-content: center;
         min-width: 100%;
+        width: 100%;
+        max-width: 100%;
+        height: auto;
     }
 
     a.grandesimages {
-        max-width: none;
-        width: 80%;
-        max-height: 275px;
-        margin-bottom: 5%;
+        min-width: 95%;
+        max-width: 95%;
+        min-height: 280px;
+        max-height: 280px;
+        height: 208px;
+        margin-bottom: 3%;
     }
 
     a.grandesimages img {
         width: 100%;
-        max-height: 200px;
+        max-height: 218px;
+        height: 218px;
         border-radius: 20px 20px 0 0;
     }
 
     .actimages {
-        width: 80%;
-        max-width: 80%;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 0;
+        height: 600px;
+        min-width: 95%;
+        max-width: 95%;
     }
 
+    a.petitesimages {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin-bottom: 20px;
+        min-width: 100%;
+        max-width: 100%;
+        min-height: 280px;
+        max-height: 280px;
+    }
+
+    a.petitesimages img{
+        min-width: 100%;
+        max-width: 100%;
+        height: 78%;
+    }
+
+
+    a.moyimages {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin-bottom: 20px;
+        min-width: 100%;
+        max-width: 100%;
+        min-height: 280px;
+        max-height: 280px;
+    }
+    
+    a.moyimages img {
+        min-width: 100%;
+        max-width: 100%;
+        height: 78%;
+    }
+
+    /*FOOTER PORTRAIT*/
+
+    footer h3 {
+        width: 230px;
+    }
+
+    footer .wrapper {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 97%;
+        margin-left: 110px;
+    }
+
+    footer .wrapper div {
+        min-width: 400px;
+    }
+
+    footer .wrapper p {
+        display: flex;
+        width: 230px;
+        min-width: 100%;
+    }
+    
 }
 
 /*************************
@@ -1111,11 +1193,6 @@ VERSION TABLETTE PAYSAGE
         padding: 10px;
         margin-bottom: 0;
         padding-bottom: 0;
-    }
-
-    main {
-        padding: 10px;
-        padding-top: 0;
     }
 
         /*Section hébergements et populaires TABLETTE PAYSAGE*/
@@ -1132,7 +1209,7 @@ VERSION TABLETTE PAYSAGE
 
         #presentation {
             margin : 0;
-            width: 95%
+            width: 95%;
         }
 
         #presentation h3 {
@@ -1146,7 +1223,7 @@ VERSION TABLETTE PAYSAGE
             flex-wrap: wrap;
             background-color:#F2F2F2;
             align-items: center;
-            width: 100%;
+            width: 95%;
             border-radius: 0;
             margin-bottom: 5%;
         }
@@ -1170,16 +1247,37 @@ VERSION TABLETTE PAYSAGE
             margin-left: 3%;
         }
 
+
+
         #activités {
             justify-content: space-evenly;
+            height: 1000px;
+            margin-bottom: 0;
+            width: 100%;
         }
 
         a.grandesimages {
-            width: 40%;
+            width: 45%;
+            height: 46%;
         }
 
         .actimages {
-            width: 40%;
+            width: 45%;
+            height: 46%;
+        }
+
+        /*FOOTER TABLETTE*/
+
+        footer .wrapper {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 97%;
+            margin-left: 50px;
+        }
+    
+        footer .wrapper div {
+            min-width: 300px;
         }
         
 }
